--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "experimentalDecorators": true,
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "jsx": "react-jsx",
+        "declaration": true
     },
-    "include": ["**/*.ts"],
+    "include": ["src/**/*.tsx", "src/**/*.ts"],
     "exclude": ["node_modules"]
 }
