--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "author": "André Thomas",
     "license": "ISC",
     "dependencies": {
-        "react": "^18.3.1"
+        "react": "^18.3.1",
+        "swr": "^2.2.5",
+        "usehooks-ts": "^3.1.0"
     }
 }
